--- a/kinkstore/styles/main.css
+++ b/kinkstore/styles/main.css
@@ -1,9 +1,136 @@
 div{
-	margin:5px;
-	border: 1px solid black;
+	Qborder: 1px solid black;
 }
 
+
 #wrapper{
-	background: url(../mockup_1340.jpg) center top no-repeat;
-	height: 900px;
+	Qborder: 2px solid red;
+	text-align: center;
 }
+
+#holder{
+	margin: 0 auto;
+	height: 900px;
+	width: 1024px;
+	text-align: left;
+
+
+	width: 80%;
+}
+
+#account-bar{
+	height:35px;
+}
+
+#logo-bar{
+	height: 110px;
+	line-height: 110px;
+}
+
+#search-box{
+	float: right;
+	line-height: 110px;
+}
+
+#search-box input{
+	height: 30px;
+	padding: 0;
+}
+
+#search-box input[type='submit']{
+	width: 30px;
+	
+	background: red;
+}
+
+#menu{
+	height: 40px;
+}
+#menu > ul li{
+	margin-left: 20px;
+	display: inline-block;
+	line-height: 40px;
+}
+
+#menu > ul li a{
+	padding-right: 15px;
+	display: block;
+}
+
+#banner{
+	height:300px;
+}
+
+#container{
+	overflow: hidden;
+}
+
+#sidebar, #content{ /* create columns with the same height */
+	margin-bottom: -99999px;
+    padding-bottom: 99999px;
+}
+#sidebar ul:last-child{
+	margin-bottom: 20px;
+}
+
+#sidebar{
+	width: 250px;
+	display: block;
+	float: left;
+}
+
+#sidebar ul li{
+	padding: 10px 25px 10px 17px;
+}
+#sidebar ul li a{
+	display: block;
+}
+
+#content{
+	margin-left: 250px;
+	border: 1px solid red;
+}
+
+#content > ul li.item{
+	margin: 5px;
+	width: 240px;
+	display: inline-block;
+	text-align: center;
+
+	Qborder: 1px dashed blue;
+}
+
+#content > ul li.item img{
+	width: 225px;
+	height: 165px;
+}
+
+.item-title{
+	margin-bottom: 15px;
+}
+
+.price{
+	margin-bottom: 10px;
+}
+
+.old-price{
+	padding-right: 15px;
+}
+
+.addtocard{
+	display: inline-block;
+	padding: 6px 12px;
+	margin-bottom: 25px;	
+}
+
+#featured{
+	margin: 10px auto;
+
+}
+
+#featured ul li{
+	display: inline-block;
+}
+
+
+
