--- a/kinkstore/styles/main.css
+++ b/kinkstore/styles/main.css
@@ -122,15 +122,39 @@ div{
 	padding: 6px 12px;
 	margin-bottom: 25px;	
 }
+h2.featured-title{
+	margin: 0;
+	padding: 12px 16px;}
 
 #featured{
 	margin: 10px auto;
+	text-align: center;
+}
 
+#featured h2.featured-title{
+	text-align: left;
+
+}
+
+#featured ul{
+	padding: 0 45px;
+	height: 250px;
+	overflow: hidden;
 }
 
 #featured ul li{
 	display: inline-block;
 }
 
+#featured .item {
+	width: 24%;
+	overflow: hidden;
+}
 
+#featured p.item-title {
+	height: 35px;
+	line-height: 1.2em;	
+	overflow: hidden;
+	font-size:0.9em;
+}
 
