--- a/kinkstore/styles/main.css
+++ b/kinkstore/styles/main.css
@@ -36,7 +36,7 @@ body, #wrapper{
 	padding: 0;
 }
 
-#search-box input[type='submit']{
+#search-box input[type='submit'],  #search-box input:last-child{
 	width: 30px;
 	
 	background: red;
@@ -162,8 +162,21 @@ h2.featured-title{
 	margin-right: 1%;
 	width: 19%;
 }
+
+.row {
+	padding: 20px 0;
+}
+
 .row:after, .row:before {
     content: " ";
     display: block;
     clear: both;
+}
+
+footer .row h3{
+	margin-top: 0;
+}
+
+footer .row li{
+	margin: 6px 0;
 }
