--- a/kinkstore/styles/skin.css
+++ b/kinkstore/styles/skin.css
@@ -59,7 +59,7 @@ body{
 	padding: 0 15px;
 }
 
-#search-box input[type='submit']{
+#search-box input[type='submit'], #search-box input:last-child{
 	padding: 0 20px;
 	background: #959595 url(../images/search-20.png) center no-repeat;
 }
@@ -109,6 +109,11 @@ body{
 	background: #fff;
 }
 
+#content h2.featured-title{
+	color: #fb2860;
+	font-size: 1.8em;
+}
+
 .item{
 	font-size: 1.6em; /* 16pt */
 	font-family: Myriad Pro;
@@ -121,6 +126,7 @@ body{
 
 .price{
 	color: #fb2860;
+	font-weight: bold;
 }
 
 .old-price{
@@ -147,7 +153,7 @@ body{
 
 #featured{
 	background: #fff;
-	background: #ccc;
+	Qbackground: #ccc;
 }
 
 
@@ -156,9 +162,20 @@ footer{
 	 background: #000;
 }
 
+footer .row h3{
+	color: #fb2860;
+	font-size: 1.6em;
+}
+
+footer .row li a{
+	color: #525252;
+	text-decoration: none;
+	font-size: 1.4em;
+}
+
 #copyright{
-	color: white;
-	border-top: 2px solid #d0d0d0;
+	color: #afafaf;
+	border-top: 2px solid #0d0d0d;
 	padding: 18px 0 12px;
 	font-size: 1.2em;
 }
