--- a/kinkstore/styles/media-queries.css
+++ b/kinkstore/styles/media-queries.css
@@ -49,5 +49,21 @@
 
 	.holder {
 	     width: 100%;
+	 }
+
+	 #content > ul li.item{
+	  	width: 47%;
+	  	margin: 5px 1%;
 	  }
+}
+
+
+@media screen and (max-width: 250px) {
+
+	#content > ul li.item{
+	  	width: 98%;
+	  	margin: 5px 1%;
+	  	display: block;
+	  }
+
 }
