MQ: test hide section in smaller res

--- a/kinkstore/styles/media-queries.css
+++ b/kinkstore/styles/media-queries.css
@@ -38,6 +38,11 @@
   #content{
   	margin-left: 0;
   }
+
+  /** just to test... hide the "Hot Deals" section */
+  #featured{
+  	display: none;
+  }
 }
 
 
