--- a/kinkstore/styles/media-queries.css
+++ b/kinkstore/styles/media-queries.css
@@ -20,7 +20,7 @@
 }
 
 
-
+/*
 @media screen and (max-width: 990px) {
   
   body{
@@ -40,7 +40,7 @@
   }
 
 
-}
+}*/
 
 
 @media screen and (max-width: 768px) and (max-device-width : 768px) {
