--- a/kinkstore/styles/main.css
+++ b/kinkstore/styles/main.css
@@ -31,6 +31,59 @@ body, #wrapper{
 	height: 100%;
 }
 
+#logo-bar .navbar-fluid{
+	position: absolute;
+    right: 20px;
+    top: 75px;
+
+    display: none;
+}
+/**********************************/
+
+
+
+.navbar-toggle {
+    background-image: none;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    float: right;
+    margin-bottom: 8px;
+    margin-right: 15px;
+    margin-top: 8px;
+    padding: 9px 10px;
+    position: relative;
+}
+
+button, html input[type="button"], input[type="reset"], input[type="submit"] {
+    cursor: pointer;
+}
+button {
+    text-transform: none;
+	overflow: visible;
+}
+.sr-only {
+    border: 0 none;
+    clip: rect(0px, 0px, 0px, 0px);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+}
+.navbar-toggle .icon-bar {
+    background-color: #888;
+    border-radius: 1px;
+    display: block;
+    height: 2px;
+    width: 22px;
+}
+
+.navbar-toggle .icon-bar + .icon-bar {
+    margin-top: 4px;
+}
+
+/*****************************************/
 #search-box{
 	float: right;
 	margin-top: 55px;
@@ -60,6 +113,16 @@ body, #wrapper{
 	padding-right: 15px;
 	display: block;
 }
+
+#menu > ul li ul{
+	display: none;
+	position: absolute;
+}
+
+#menu > ul li:hover ul{
+	display: block;
+}
+
 
 #banner{
 	height:300px;
