--- a/kinkstore/styles/skin.css
+++ b/kinkstore/styles/skin.css
@@ -24,7 +24,7 @@ body{
 }
 
 #logo-bar{
-	QQbackground: url(../images/header_bgr_long.png) repeat-x;
+	background: url(../images/header_bgr_long.png) repeat-x;
 }
 
 #logo span{
