--- a/kinkstore/styles/skin.css
+++ b/kinkstore/styles/skin.css
@@ -207,3 +207,37 @@ footer .row li a{
 	padding: 18px 0 12px;
 	font-size: 1.2em;
 }
+
+/*** inside page ***/
+.item-info h2.item-title {
+	font-size: 2.2em;
+	letter-spacing: 1;
+	text-transform: uppercase;
+	color: #fb2860;
+}
+
+.item-info .item-desc {
+	font-size: 1.3em;
+	color: #666;
+}
+
+.item-info .item-price {
+	font-size: 1.7em;
+}
+
+.item-info .item-to-cart {
+	padding-left: 5px;
+	font-size: 1.3em;
+	line-height: 1.7em;
+}
+
+.item-info .addtocard {
+	font-size: 1.3em;
+}
+
+.item-info .quantity {
+	margin: 0 20px;
+	padding: 0 10px;
+	font-size: 1.3em;
+	width: 25px;
+}
