--- a/kinkstore/styles/skin.css
+++ b/kinkstore/styles/skin.css
@@ -10,6 +10,10 @@ body{
 
 }
 
+a{
+	text-decoration: none;
+}
+
 #wrapper{
 	background: red;
 }
@@ -240,4 +244,40 @@ footer .row li a{
 	padding: 0 10px;
 	font-size: 1.3em;
 	width: 25px;
+}
+
+/** item More info Block **/
+.item-more-info{
+	border-color: #c1c1c1;
+    border-style: solid;
+    border-width: 1px 1px 0;
+}
+
+.item-more-info .section .title{
+	background: none repeat scroll 0 0 transparent;
+    border-color:  #c1c1c1;
+    border-image: none;
+    border-style: none none solid;
+    border-width: medium medium 1px;
+}
+
+.item-more-info .section .title a{
+    color: #000000;
+    font-size: 1.154em;
+    text-transform: uppercase;
+}
+
+.item-more-info .section .title a i.icon-plus {
+    border: 3px solid #c1c1c1;
+    border-radius: 15px;
+    font-size: 0.6em;
+}
+
+.item-more-info .section .section-content{
+	border: medium none;
+    font-size: 0.923em;
+}
+
+.item-more-info .active .section-content {
+    border-bottom: 1px solid #c1c1c1;
 }
