--- a/kinkstore/styles/skin.css
+++ b/kinkstore/styles/skin.css
@@ -253,31 +253,38 @@ footer .row li a{
     border-width: 1px 1px 0;
 }
 
-.item-more-info .section .title{
-	background: none repeat scroll 0 0 transparent;
-    border-color:  #c1c1c1;
-    border-image: none;
-    border-style: none none solid;
-    border-width: medium medium 1px;
+.item-more-info .section{
+	border-bottom: 1px solid #c1c1c1;
 }
 
 .item-more-info .section .title a{
-    color: #000000;
-    font-size: 1.154em;
+    color: #000;
+    font-size: 1.15em;
     text-transform: uppercase;
 }
 
 .item-more-info .section .title a i.icon-plus {
     border: 3px solid #c1c1c1;
     border-radius: 15px;
-    font-size: 0.6em;
+    font-size: 0.5em;
+}
+
+.item-more-info .section .title a i.icon-plus:before {
+    background: url(../images/others/plus-16-fat.png) center right no-repeat;
+    content:"+";
+    color: #666;
+    font-weight: bold;
+}
+
+.item-more-info .active .title a i.icon-plus:before {
+    background: url(./images/others/minus-16-fat.png) center right no-repeat;
+    content:"ss";
+    color: transparent;
 }
 
 .item-more-info .section .section-content{
 	border: medium none;
-    font-size: 0.923em;
+    font-size: 0.92em;
 }
 
-.item-more-info .active .section-content {
-    border-bottom: 1px solid #c1c1c1;
-}
+
